// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> renders Button 1`] = `
<styled.button>
  example button
</styled.button>
`;

exports[`<Button /> renders Button with onClick 1`] = `
<styled.button
  onClick={[Function]}
>
  example button
</styled.button>
`;
